Adds Weather API, working on multi-city functionality
Co-Authored-By: Will Wayman <nepeanwjdw@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
       <div class="display">
 
       </div>
+
+      <section>
+        <h1><span id="current-temp"></span></h1>
+        <select id="current-city">
+          <option value="london">London</option>
+          <option value="newyork">New York</option>
+          <option value="paris">Paris</option>
+          <option value="tokyo">Tokyo</option>
+        </select>
+      </section>
+
       <div class="energy_usage">
 
       </div>
